package com.splendor.assistant.model;

public enum CardEfficiency {
    VERY_HIGH, HIGH, LOW
}
