package com.splendor.assistant.model;

public enum GamePhase {
    EARLY_GAME, MID_GAME, LATE_GAME
}
