package com.splendor.assistant.model;

public enum GoalType {
    BUY_CARD,
    RESERVE_CARD,
    BUILD_DOMINANT_COLOR,
    BLOCK_OPPONENT,
    COLLECT_TOKENS,
    PLAY_RESERVED_CARD,
    MANAGE_TOKEN_LIMIT
}
