package com.splendor.assistant.model.facts.analysis;
public class TokenLimitRiskFact {
}
