package com.splendor.assistant.model.facts.explanation;
public enum DecisionLevel {
    BASE_FACT,
    ANALYSIS,
    STRATEGIC_GOAL,
    MOVE_SCORE,
    RECOMMENDATION
}
